fix three new.html.erb

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
     <%= f.password_field :password_confirmation,  class: 'form-control-lg', autocomplete: "new-password" %>
   </div>
 
-  <div class="actions m-3">
+  <div class="actions mt-4 mb-2">
     <%= f.submit "S'inscrire", class: "btn btn-lg btn-secondary border-primary"  %>
   </div>
 <% end %>
