--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,16 @@
-<div class="container mt-3 mb-2 text-center">
+<div class="container mt-4 mb-2 text-center">
     <h3>Mot de passe oublié ?</h3>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field mt-3">
+  <div class="field mt-2">
     <%= f.label :email %>, "Email", class:"mt-3"%><br/>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions mt-2">
-    <%= f.submit "envoyer",  class: "btn btn-lg btn btn-light border-secondary"  %>
+  <div class="actions m-2">
+    <%= f.submit "envoyer",  class: "btn btn-lg btn-light border-secondary"  %>
   </div>
 <% end %>
 
