--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,49 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container mt-4 mb-2 text-center">
+    <h3>Modifier mon mot de passe</h3>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field mt-2">
+      <span class="iconify" data-icon="mdi:email" data-width="19"></span>
+    <%= f.label :email, " Email", class:"mt-3"%></br>
+    <%= f.email_field :email, autofocus: true, class: 'form-control-lg', autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div>En attente de confirmation pour : <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="field mt-2">
+      <span class="iconify" data-icon="bx:bxs-lock" data-width="19"></span>
+    <%= f.label :password, "Nouveau mot de passe", class:"mt-3"%></br> <i>(Laisser vide pour le conserver)</i><br />
+    <%= f.password_field :password, class: 'form-control-lg', autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em><%= @minimum_password_length %> Caractères minimum</em>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field mt-2">
+
+  <%= f.label :password_confirmation, "Confirmation du mot de passe", class:"mt-3"%></br>
+    <%= f.password_field :password_confirmation, class: 'form-control-lg', autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="field mt-2">
+    <%= f.label :current_password, "Ancien mot de passe", class:"mt-3"%></br>
+    <%= f.password_field :current_password, class: 'form-control-lg', autocomplete: "current-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="actions mt-2">
+    <%= f.submit "Mise à jour", class: "m-2 btn btn-lg btn-secondary border-primary" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<hr>
+<h3>Supprimer mon compte</h3>
+<p class="mt-2">Vous souhaitez quitter la communauté Gaffex? <%= button_to "Supprimer", registration_path(resource_name), data: { confirm: "Vous êtes sûr ?" }, class: "btn btn-lg btn-danger border-primary m-2", method: :delete %></p>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<span class="mb-3"><%= link_to "Retour", :back%></span>
 
-<%= link_to "Back", :back %>
+</div>
