unlock instructions devise in french

--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<h2 style="text-align: center;">Bienvenue <%= @resource.email %> !</h2>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<h5 style="text-align: center;"><strong><span style="color: #ff0000;">Votre compte a été verrouillé en raison d'un nombre excessif de tentatives de connexion infructueuses.</span></strong></h5>
 
-<p>Click the link below to unlock your account:</p>
+<h5 style="text-align: center;">Cliquez sur le lien ci-dessous pour déverrouiller votre compte :</h5>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<h5 style="text-align: center;"><strong><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></strong></h5>
