--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,3 @@
-<p>Welcome <%= @email %>!</p>
-
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<h2 style="text-align: center;">Bienvenue ! <%= @email %></h2>
+<h5 style="text-align: center;">Vous pouvez confirmer l'adresse e-mail de votre compte via le lien ci-dessous :</h5>
+<p style="text-align: center;"><strong><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></strong></p>
