Back tested in articles/show.html.erb

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,19 @@
 <h1>Articles#show</h1>
 <p>Find me in app/views/articles/show.html.erb</p>
+
+<%= @article.title%>
+<br><br>
+<%= @article.user.first_name%>
+
+<%= @article.user.last_name%>
+<br><br>
+<%= @article.summary%>
+<br><br>
+<%= @article.protocol%>
+<br><br>
+<%= @article.result%>
+<br><br>
+<%= @article.conclusion%>
+<br><br>
+<%= @article.references%>
+
