--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,8 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<%=render 'article_list'%>
 
-<% @articles.each do |article| %>
 
-<p><%=article.title%></p>
-<p><%=article.user.first_name%> <%=article.user.last_name%></p>
-<a href="<%=article_path(article.id)%>">Voir Article</a>
+<div class="col-8  justify-content-center ">
 
-<%end%>
+ 
 
+</div>
