--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<div class="offset-2 col-6">
+
 <h1>Articles#index</h1>
 <p>Find me in app/views/articles/index.html.erb</p>
 
@@ -8,4 +10,4 @@
 <a href="<%=article_path(article.id)%>">Voir Article</a>
 
 <%end%>
-
+</div>
