--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<div class="offset-2 col-6">
 <h1>Articles#show</h1>
 <p>Find me in app/views/articles/show.html.erb</p>
 
@@ -17,3 +18,4 @@
 <br><br>
 <%= @article.references%>
 
+</div>
