--- a/app/views/layouts/_navbar_closed.html.erb
+++ b/app/views/layouts/_navbar_closed.html.erb
@@ -2,8 +2,8 @@
  <div class="b-example-divider"></div>
 
     <div
-      class="d-flex flex-column flex-shrink-0 p-3 bg-light sticky"
-      style="width: 280px"
+      class="d-flex flex-column flex-shrink-0 p-3 bg-light"
+      style="width: 280px; height: 100vh;"
     >
       <a
         href="https://getbootstrap.com/"
@@ -31,7 +31,7 @@
         <li>
           <a href="#" class="nav-link link-dark">
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M14.59 2.59c-.38-.38-.89-.59-1.42-.59H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8.83c0-.53-.21-1.04-.59-1.41l-4.82-4.83zM15 16h-2v2c0 .55-.45 1-1 1s-1-.45-1-1v-2H9c-.55 0-1-.45-1-1s.45-1 1-1h2v-2c0-.55.45-1 1-1s1 .45 1 1v2h2c.55 0 1 .45 1 1s-.45 1-1 1zm-2-8V3.5L18.5 9H14c-.55 0-1-.45-1-1z" fill="currentColor"/></svg>
-            Dashboard
+            Nouvel article
           </a>
         </li>
       </ul>
@@ -53,21 +53,18 @@
           <img
             src="https://github.com/mdo.png"
             alt=""
-            class="rounded-circle me-2"
-            width="32"
-            height="32"
+            class="ms-4 rounded-circle me-2"
+            width="38"
+            height="38"
           />
-          <strong>mdo</strong>
+          <strong>User </strong>
         </a>
         <ul
           class="dropdown-menu text-small shadow"
           aria-labelledby="dropdownUser2"
           style=""
         >
-          <li><a class="dropdown-item" href="#">New project...</a></li>
-          <li><a class="dropdown-item" href="#">Settings</a></li>
           <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li><hr class="dropdown-divider" /></li>
           <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
       </div>
