--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
   </head>
   <body>
     <div class="row d-flex">
-        <%= render 'layouts/navbar_opened' %> 
+        <%= render 'layouts/navbar_closed' %> 
+        <div class="offset-2 col-4 mx-auto">
         <%= yield %>
-    </div>
+        </div>
+    </>
     <style>html {overflow-x: hidden;}</style>
   </body>
 </html>
