--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="offset-2 col-6">
+<div class="mt-5 offset-2 col-6"  style="position: absolute; left: 90px; right: 100px; width: auto" >
 <h1>Articles#show</h1>
 <p>Find me in app/views/articles/show.html.erb</p>
 
