fixedd nav not being sticky

--- a/app/views/layouts/_navbar_closed.html.erb
+++ b/app/views/layouts/_navbar_closed.html.erb
@@ -1,7 +1,5 @@
-<div class="b-example-divider"></div>
-
 <div
-  class="d-flex flex-column flex-shrink-0 p-3 bg-light"
+  class="d-flex flex-column flex-shrink-0 p-3 bg-light sticky-top"
   style="width: 280px; height: 100vh;"
 >
   <a
