--- a/app/views/layouts/_navbar_opened.html.erb
+++ b/app/views/layouts/_navbar_opened.html.erb
@@ -1,12 +1,11 @@
-<div class="b-example-divider"></div>
-
 <div
-  class="d-flex flex-column flex-shrink-0 p-3 bg-light"
-  style="width: 280px; height: 100vh;"
+  class="d-flex flex-column flex-shrink-0 pt-3 bg-light sticky-top"
+  style="width: 14em; height: 100vh;"
 >
   <a
-    href="https://getbootstrap.com/"
+    id='nav-toggler'
     class="
+    ms-4
           d-flex
           align-items-center
           mb-3 mb-md-0
@@ -15,122 +14,20 @@
           text-decoration-none
         "
   >
-    <svg class="bi me-2" width="40" height="32">
-    </svg>
-    <span class="fs-4 me-2">    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg>Gaffex</span>
+    <span class="fs-4 ms-2 me-2">    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg>Gaffex</span>
   </a>
   <hr/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
-      <a href="#" class="nav-link active" aria-current="page">
+      <a href="#" class="nav-link" aria-current="page">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
           <path d="M12 20c-4.4 0-8-3.6-8-8s3.6-8 8-8s8 3.6 8 8s-3.6 8-8 8m0-18C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m-1 12h2v3h3v-5h2l-6-5l-6 5h2v5h3v-3" fill="currentColor"/>
         </svg>
         Accueil
-        <div class="p-3 bg-light col-2 sticky-top" style="height: 100vh">
-          <a
-            href="/"
-            class="
-      d-flex
-      align-items-center
-      mb-3 mb-md-0
-      me-md-auto
-      link-dark
-      text-decoration-none
-    "
-          >
-            <svg class="bi me-2" width="40" height="32">
-              <use xlink:href="#bootstrap"></use>
-            </svg>
-            <span class="fs-4">Sidebar</span>
-          </a>
-          <hr/>
-          <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-              <a href="#" class="nav-link active" aria-current="page">
-                <svg class="bi me-2" width="16" height="16">
-                  <use xlink:href="#home"></use>
-                </svg>
-                Home
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                <svg class="bi me-2" width="16" height="16">
-                  <use xlink:href="#speedometer2"></use>
-                </svg>
-                Dashboard
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                <svg class="bi me-2" width="16" height="16">
-                  <use xlink:href="#table"></use>
-                </svg>
-                Orders
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                <svg class="bi me-2" width="16" height="16">
-                  <use xlink:href="#grid"></use>
-                </svg>
-                Products
-              </a>
-            </li>
-            <li>
-              <a href="#" class="nav-link link-dark">
-                <svg class="bi me-2" width="16" height="16">
-                  <use xlink:href="#people-circle"></use>
-                </svg>
-                Customers
-              </a>
-            </li>
-          </ul>
-          <hr/>
-          <div class="dropdown">
-            <a
-              href="#"
-              class="
-        d-flex
-        align-items-center
-        link-dark
-        text-decoration-none
-        dropdown-toggle
-      "
-              id="dropdownUser2"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <img
-                src="https://github.com/mdo.png"
-                alt=""
-                class="rounded-circle me-2"
-                width="32"
-                height="32"
-                />
-              <strong>mdo</strong>
-            </a>
-            <ul
-              class="dropdown-menu text-small shadow"
-              aria-labelledby="dropdownUser2"
-              style=""
-            >
-              <li><a class="dropdown-item" href="#">New project...</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
-              <li>
-                <hr class="dropdown-divider"/>
-              </li>
-              <li><a class="dropdown-item" href="#">Sign out</a></li>
-            </ul>
-          </div>
-        </div>
-
       </a>
     </li>
     <li>
-      <a href="#" class="nav-link link-dark">
+      <a href="#" class="nav-link">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
           <path d="M14.59 2.59c-.38-.38-.89-.59-1.42-.59H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8.83c0-.53-.21-1.04-.59-1.41l-4.82-4.83zM15 16h-2v2c0 .55-.45 1-1 1s-1-.45-1-1v-2H9c-.55 0-1-.45-1-1s.45-1 1-1h2v-2c0-.55.45-1 1-1s1 .45 1 1v2h2c.55 0 1 .45 1 1s-.45 1-1 1zm-2-8V3.5L18.5 9H14c-.55 0-1-.45-1-1z" fill="currentColor"/>
         </svg>
