--- a/app/views/layouts/_navbar_opened.html.erb
+++ b/app/views/layouts/_navbar_opened.html.erb
@@ -16,7 +16,7 @@
   >
     <span class="fs-4 ms-2 me-2"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg>Gaffex</span>
   </a>
-  <hr/>
+  <hr class="ms-2"/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
       <a href="<%= root_path %>" class="nav-link" aria-current="page">
@@ -35,6 +35,6 @@
       </a>
     </li>
   </ul>
-  <hr/>
+  <hr class="ms-2"/>
   <%= render 'layouts/user_dropdown_opened' %>
 </div>
