--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 
-<div class="offset-2 col-6">
-    <div class="col-8  justify-content-center ">
+
+    <div class="card border-secondary p-4 justify-content-center ">
 
         <%=render 'article_list'%>
 
     </div>
-</div>
+
 
