front articles index version 3

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,10 @@
 
-
+<div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center ">
 
         <%=render 'article_list'%>
 
     </div>
+</div>
 
 
