--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -1,8 +1,8 @@
   <% @articles.each_with_index  do |article,index| %>
-    <div class="preview-article row mt-4" id="<%=index%>"">
+    <div class=" preview-article row mt-4" id="<%=index%>">
 
-        <div class="col-4">
-            <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEMu_7Zrv8wPEw2zvfLT3FOcYBjNJCOy1bKQ&usqp=CAU' alt='img exemple'/>
+        <div class="col-4 border-primary">
+            <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEMu_7Zrv8wPEw2zvfLT3FOcYBjNJCOy1bKQ&usqp=CAU' alt='img exemple' class="img-thumbnail"/>
         </div>        
 
         <div class="col-5">
@@ -11,14 +11,18 @@
             <p class="text-start"><%=article.short_summary%></p>
         </div>
 
-        <div class="col-3">
-            <div class="">
-                <span class="badge rounded-pill bg-success">Approved</span>                
+        <div class="card border-light col-3">
+            <div class="d-flex justify-content-around">
+                <span class="badge rounded-pill bg-success ">Approved</span>                
                 <span class="badge rounded-pill bg-warning">Need Review</span>
                 <span class="badge rounded-pill bg-danger">Not Approved</span>
             </div>
-
-            <button type="button" class="btn btn-primary"><a href="<%=article_path(article.id)%>"></a>voir article</button>            
+            
+            <div class="position-absolute bottom-0 start-50 translate-middle-x">
+                <div class="m-3">
+                    <button type="button" class="btn btn-primary"><a href="<%=article_path(article.id)%>"></a>voir article</button> 
+                </div>
+            </div>           
         </div>
 
     </div>
