--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -20,7 +20,7 @@
             
             <div class="position-absolute bottom-0 start-50 translate-middle-x">
                 <div class="m-3">
-                    <button type="button" class="btn btn-primary"><a href="<%=article_path(article.id)%>"></a>voir article</button> 
+                    <button type="button" class="btn btn-primary" ><a href="<%=article_path(article.id)%>"></a>Voir article</button> 
                 </div>
             </div>           
         </div>
