--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,25 @@
 <!-- Background image -->
 <div
-  class="text-center bg-image justify-content-start"
+  class="pt-5 text-center bg-image justify-content-start"
   style="
-    background-image: url('https://mdbootstrap.com/img/new/slides/041.jpg');
+    background-image: url('<%= asset_path 'bgimage.jpg' %>');
     height: 40vh;
+    background-size: cover;
+    background-position: 35% 65%;
   "
 >
-  <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
+  <span style="filter: blur(8px)"></span>
+  <div class="mask" style="background-color: rgba(0, 0, 0, 0.8)">
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-white">
-        <h1 class="mb-3">Heading</h1>
-        <h4 class="mb-3">Subheading</h4>
-        <a class="btn btn-outline-light btn-lg" href="#!" role="button"
-          >Call to action</a
-        >
+        <%= image_tag asset_path("logoGaffex.png") %>
+        <p class="mx-5">
+          Rejoignez-nous! Lorem ipsum dolor sit, amet consectetur adipisicing
+          elit. Magnam veritatis deleniti voluptates qui suscipit, esse cum
+          placeat totam neque, veniam vitae soluta distinctio dignissimos natus
+          nihil sed doloribus, corporis vel. Repellendus, dolore. Minima dolores
+          rerum sit reprehenderit possimus explicabo aperiam?
+        </p>
       </div>
     </div>
   </div>
