--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,17 @@
-<div class="offset-2 col-6">
+<div class="col">
+  <%= render 'layouts/header' %>
 
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
 
-<% @articles.each do |article| %>
+  <div class="offset-2 col-8 mx-auto text-center">
+    <h1>Articles#index</h1>
+    <p>Find me in app/views/articles/index.html.erb</p>
 
-<p><%=article.title%></p>
-<p><%=article.user.first_name%> <%=article.user.last_name%></p>
-<a href="<%=article_path(article.id)%>">Voir Article</a>
+    <% @articles.each do |article| %>
 
-<%end%>
+      <p><%= article.title %></p>
+      <p><%= article.user.first_name %> <%= article.user.last_name %></p>
+      <a href="<%= article_path(article.id) %>">Voir Article</a>
+
+    <% end %>
+  </div>
 </div>
