--- a/app/views/layouts/_navbar_closed.html.erb
+++ b/app/views/layouts/_navbar_closed.html.erb
@@ -1,23 +1,25 @@
-
 <div
   id="nav-closed"
-  class="col-1 d-flex flex-column flex-shrink-0 py-3 bg-light sticky-top"
+  class="col-1 d-flex flex-column flex-shrink-0 py-3 bg-light sticky-top text-center"
   style="height: 100vh;"
-> 
-  <a
-    id='nav-closed-toggler'
-    class="
-          ms-4
+>
+  <ul class="nav nav-pills flex-column">
+    <li class="nav-item mt-3">
+      <a
+        id='nav-closed-toggler'
+        class="
           d-flex
+          justify-content-center
           align-items-center
           mb-3 mb-md-0
-          me-md-auto
           link-dark
           text-decoration-none
         "
-  >
-    <span class="fs-4 me-2"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg></span>
-  </a>
+      >
+        <span class="fs-4"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg></span>
+      </a>
+    </li>
+  </ul>
   <hr class="ms-2"/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
@@ -44,9 +46,11 @@
   class="col-2 flex-column flex-shrink-0 py-3 bg-light sticky-top"
   style="display: none; height: 100vh;"
 >
-  <a
-    id='nav-opened-toggler'
-    class="
+  <ul class="nav nav-pills flex-column">
+    <li class="nav-item mt-3">
+      <a
+        id='nav-opened-toggler'
+        class="
     ms-4
           d-flex
           align-items-center
@@ -55,9 +59,12 @@
           link-dark
           text-decoration-none
         "
-  >
-    <span class="fs-4 ms-2 me-2"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg>Gaffex</span>
-  </a>
+      >
+
+        <span class="fs-4 ms-2 me-2"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="none"><path d="M8 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M8 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M6 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 6a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M12 14a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M14 18a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 8a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/><path d="M20 12a2 2 0 1 1-4 0a2 2 0 0 1 4 0z" fill="currentColor"/><path d="M18 20a2 2 0 1 0 0-4a2 2 0 0 0 0 4z" fill="currentColor"/></g></svg>Gaffex</span>
+      </a>
+    </li>
+  </ul>
   <hr class="ms-2"/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
