fixed navbar separators

--- a/app/views/layouts/_navbar_closed.html.erb
+++ b/app/views/layouts/_navbar_closed.html.erb
@@ -20,7 +20,7 @@
       </a>
     </li>
   </ul>
-  <hr class="ms-2"/>
+  <hr class="ms-4 me-3"/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
       <a href="<%= root_path %>" class="nav-link" aria-current="page">
@@ -37,7 +37,7 @@
       </a>
     </li>
   </ul>
-  <hr class="ms-2"/>
+  <hr class="ms-4 me-3"/>
   <%= render 'layouts/user_dropdown_closed' %>
 </div>
 
@@ -65,7 +65,7 @@
       </a>
     </li>
   </ul>
-  <hr class="ms-2"/>
+  <hr class="ms-4 me-3"/>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item mt-3">
       <a href="<%= root_path %>" class="nav-link" aria-current="page">
@@ -84,7 +84,7 @@
       </a>
     </li>
   </ul>
-  <hr class="ms-2"/>
+  <hr class="ms-4 me-3"/>
   <%= render 'layouts/user_dropdown_opened' %>
 </div>
 
