added a small margin at the left of gaffex logo

--- a/app/views/layouts/_header_small.html.erb
+++ b/app/views/layouts/_header_small.html.erb
@@ -3,7 +3,7 @@
   class="py-4 text-center bg-light justify-content-start">
 
     <div class="d-flex justify-content-start h-100">
-      <div class="">
+      <div class="ms-3">
         <img src="<%= asset_path("logoGaffex.png") %>">
       </div>
     </div>
