--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,15 @@
 <div class="mt-5 offset-2 col-6"  style="position: absolute; left: 90px; right: 100px; width: auto" >
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
-</div>
+
 
 <div class="col">
   <!--render small header-->
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 justify-content-center bg-light ">
+
+      <div class="card border-light col-3 bg-light">
+        <%= @article.user.first_name%>
+        <%= @article.user.last_name%>
+      </div> 
 
       <div class="card border-light col-3">
         <div class="d-flex justify-content-around bg-light ">
@@ -15,22 +18,47 @@
           <span class="badge rounded-pill bg-danger">Not Approved <span class="badge rounded-pill bg-primary">1</span></span>
         </div>
       </div>
+        <div class="card border-light bg-light ">
+        <h3><center><%= @article.title%><center><h3>
+        </div> 
+        <div>   
+          <br><br> 
+        </div>
 
-        <%= @article.title%>
-      <br><br>
-      <%= @article.user.first_name%>
-
-      <%= @article.user.last_name%>
-      <br><br>
+        <div class="card border-secondary p-4 bg-light ">  
+        <div class="card-header">Résumé</div>
+          <div class="card-body justify-content-center">
+          <div class="">
       <%= @article.summary%>
-      <br><br>
+          </div>
+              </div>  
+        <div>   
+          <br> 
+        </div>
+        <div class="card border-light p-4 justify-content-center bg-light ">  
+        <div class="card-header">Protocole</div>
       <%= @article.protocol%>
-      <br><br>
+              </div>  
+      <div>   
+          <br> 
+        </div>
+        <div class="card border-light p-4 justify-content-center bg-light ">  
+        <div class="card-header">Résultats</div>
       <%= @article.result%>
-      <br><br>
+              </div>  
+      <div>   
+          <br> 
+        </div>
+        <div class="card border-light p-4 justify-content-center bg-light ">  
+        <div class="card-header">Conclusion</div>
       <%= @article.conclusion%>
-      <br><br>
+              </div>  
+    <div>   
+          <br> 
+        </div>
+        <div class="card border-light p-4 justify-content-center bg-light ">  
       <%= @article.references%>
+              </div>  
 
       </div>
     </div>
