--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<section class="border border-danger border-5 mt-5 pt-1">
+<section class="bg-light mt-5 pt-1">
   <div class="text-center text-md-start mt-2">
     <div class="row text-center">
       <div class="col-2 ms-md-5 ms-0">
