--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,26 +3,37 @@
     <div class="row text-center">
       <div class="col-2 ms-md-5 ms-0">
         <img
-          class="ms-md-5 ms-0 mb-auto"
+          class="ms-md-5 ms-0"
           style="width: 5em"
           src="<%= asset_path('dodo') %>"
           alt="mascotte"
         />
       </div>
       <div class="col-7 d-flex justify-content-between">
-        <div class="col-2 mb-4">
-          <h6 class="text-uppercase fw-bold mb-2">Nous Contacter</h6>
+        <div class="col-2">
+          <h6 class="text-uppercase fw-bold">Nous Contacter</h6>
         </div>
-        <div class="col-2 mb-4">
-          <h6 class="text-uppercase fw-bold mb-2">Licence</h6>
+        <div class="col-2">
+          <h6 class="text-uppercase fw-bold">Licence</h6>
         </div>
-        <div class="col-2 mb-4">
-          <h6 class="text-uppercase fw-bold mb-2">À propos</h6>
+        <div class="col-2">
+          <h6 class="text-uppercase fw-bold">À propos</h6>
         </div>
-        <div class="col-2 mb-4">
-          <h6 class="text-uppercase fw-bold mb-2">Qu'est-ce que Gaffex ?</h6>
+        <div class="col-2">
+          <h6 class="text-uppercase fw-bold">Qu'est-ce que Gaffex ?</h6>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row text-center pb-2">
+    <div class="col">
+      <small>
+        Copyright ©
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Gaffex Project</small
+      >
     </div>
   </div>
 </section>
