--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <section class="bg-light mt-5 pt-1">
-  <div class="text-center text-md-start mt-2">
-    <div class="row text-center">
+  <div class="text-center text-md-start">
+    <div class="row d-flex align-items-center text-center">
       <div class="col-2 ms-md-5 ms-0">
         <img
           class="ms-md-5 ms-0"
@@ -11,23 +11,35 @@
       </div>
       <div class="col-7 d-flex justify-content-between">
         <div class="col-2">
-          <h6 class="text-uppercase fw-bold">Nous Contacter</h6>
+          <h6 class="text-uppercase fw-bold">
+            <a class="text-decoration-none" href="#">Nous Contacter</a>
+          </h6>
         </div>
         <div class="col-2">
-          <h6 class="text-uppercase fw-bold">Licence</h6>
+          <h6 class="text-uppercase fw-bold">
+            <a
+              class="text-decoration-none"
+              href="https://github.com/8UK0W5K1/theGaffexProject/blob/master/LICENSE.txt"
+              >Licence</a
+            >
+          </h6>
         </div>
         <div class="col-2">
-          <h6 class="text-uppercase fw-bold">À propos</h6>
+          <h6 class="text-uppercase fw-bold">
+            <a class="text-decoration-none" href="#">À propos</a>
+          </h6>
         </div>
         <div class="col-2">
-          <h6 class="text-uppercase fw-bold">Qu'est-ce que Gaffex ?</h6>
+          <h6 class="text-uppercase fw-bold">
+            <a class="text-decoration-none" href="#">Qu'est-ce que Gaffex ?</a>
+          </h6>
         </div>
       </div>
     </div>
   </div>
   <div class="row text-center pb-2">
     <div class="col">
-      <small>
+      <small class="fw-bold text-muted">
         Copyright ©
         <script>
           document.write(new Date().getFullYear());
