moved footer from index to application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <div class="row d-flex">
   <%= render 'layouts/navbar_closed' %>
   <%= yield %>
+      <%=render 'layouts/footer'%>
 </div>
 
 <style>html {
