fix bug in production with dodo footer image

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
         <img
           class="ms-md-5 ms-0"
           style="width: 5em"
-          src="<%= asset_path('dodo') %>"
+          src="<%= asset_path('dodo.png') %>"
           alt="mascotte"
         />
       </div>
